# rind

./: .gitignore  Cargo.toml  README.md  build.sh  builder.toml  features.txt  flake.nix  justfile  rootfs.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bynqdvqxb6j99fn5wk87vrvg4gd455b7-source  l643gdxglljfzh2b9s1bjla010k4alwb-source
.github/workflows/: deploy-docs.yml
builder/: Cargo.toml
builder/src/: main.rs
crates/api/: Cargo.toml  README.md
crates/api-sys/: Cargo.toml
crates/api/examples/: api.c  rind.h
crates/api/src/: api.rs  msg.rs  transport.rs
crates/base/: Cargo.toml
crates/base/src/: base.rs  dunits.rs  executor.rs  flow.rs  ipc.rs  loader.rs  mount.rs  networking.rs  permissions.rs  reaper.rs  scopes.rs  services.rs  sockets.rs  timer.rs  timers.rs  transport.rs  transport_shm.rs  triggers.rs  units.rs  user.rs  variables.rs
crates/base/tests/: features.rs  svc_test.rs  vh_contracts.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: cfg.rs  dunits.rs  ipc.rs  loader.rs  units.rs  user.rs
crates/cfg/tests/: features.rs  svc_test.rs  vh_contracts.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/demo/: ipc_socket.rs  shm.c  shm.rs  shmd.rs  sif.rs  tcp.rs  uds_echo.rs  user_login.rs  user_shell.rs
crates/cli/src/: macros.rs  print.rs  rind.rs
crates/cli/src/applets/: mod.rs  run0.rs  sysinvoke.rs  syslogs.rs  sysperms.rs  syssess.rs  sysunit.rs
crates/common/: Cargo.toml
crates/core/: Cargo.toml
crates/core/benches/: dispatch.rs  user_store.rs
crates/core/src/: boot.rs  context.rs  core.rs  error.rs  events.rs  extensions.rs  hooks.rs  lifecycle.rs  logging.rs  metadata.rs  notifier.rs  orchestrator.rs  permissions.rs  persistence.rs  registry.rs  resources.rs  runtime.rs  types.rs  user.rs  utils.rs
crates/core/tests/: boot.rs  context.rs  events.rs  extensions.rs  lifecycle.rs  metadata.rs  permissions.rs  persistence.rs  registry.rs  resources.rs  user.rs  utils.rs
crates/display/: Cargo.toml
crates/display/src/: display.rs
crates/flow/: Cargo.toml
crates/flow/src/: flow.rs  shm_tp.rs  transport.rs  triggers.rs
crates/flow/tests/: triggers.rs
crates/init/: Cargo.toml  build.rs
crates/init/src/: early.rs  fstab.rs  init.rs  initramfs.rs  pump.rs
crates/init/tests/: spawn_test.rs
crates/initramfs/: Cargo.toml  README.md
crates/ipc/: Cargo.toml
crates/ipc/benches/: bench.json  transports.rs
crates/ipc/src/: ipc.rs  payloads.rs  recv.rs  send.rs  ser.rs  shm.rs
crates/ipc/tests/: message.rs  msgsoc.rs  ser.rs
crates/networking/: Cargo.toml
crates/networking/src/: networking.rs
crates/plugins/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs  mounts.rs  permissions.rs  scopes.rs  variables.rs
crates/primitives/src/utils/: networking.rs
crates/primitives/tests/: variables.rs
crates/rind-test-plugin/: Cargo.toml
crates/services/: Cargo.toml
crates/services/src/: events.rs  executor.rs  lib.rs  namespaces.rs  reaper.rs  services.rs  sockets.rs  timers.rs
crates/services/src/executors/: ima.rs  mod.rs  native.rs  remote.rs
crates/services/tests/: timers.rs
crates/systemd-loader/: Cargo.toml
crates/systemd-loader/src/: systemd.rs
crates/tty-plugin/: Cargo.toml
crates/tty-plugin/src/: seatd.rs  tty.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: Project.md  Rind.md  Todo.md
docs/.quartz/: Logo.tsx  logo.scss  quartz.config.ts  quartz.layout.ts
docs/Architecture/: Boot.md  CLI.md  Context.md  Entities.md  Facets.md  Flow.md  IPC.md  Impulses.md  Mounts.md  Networking.md  Orchestrators.md  Overview.md  Permissions.md  Plugins.md  Registry.md  Resources.md  Runtimes.md  Scopes.md  Services.md  Sockets.md  Timers.md  Units.md  Users.md  Variables.md
docs/Base/: CLI.md  Flow.md  IPC.md  Mounts.md  Network Interfaces.md  Permissions.md  Services.md  Signals.md  Sockets.md  State Machine.md  States.md  Timers.md  Transport.md  Units.md  Variables.md
docs/Core/: Boot.md  Context.md  Logger.md  Models.md  Orchestrators.md  Registry.md  Runtimes.md  Scopes.md
docs/Overview/: Rind.md
docs/Philosophy/: Balance.md  Branching.md  Communication.md  Componentization.md  Continuity.md  Persistence.md  Reactivity.md  The Awkward Philosophy.md  Unity.md
docs/Plugins/: Extensions.md  Plugins.md
examples/: fallback.toml  state
examples/etc/: issue
examples/services/: .enabled  example.toml
examples/units/: else.kdl  else.toml  example.kdl  example.toml  init.kdl  init.toml  networking.kdl  something.kdl  something.toml  sysd-test.service  test.kdl  test.toml  tp_demo.kdl  tp_demo.toml  tr_demo.kdl  tr_demo.toml
examples/units-makano/: user.toml
man/: rind-run0.1  rind-sysinvoke.1  rind-syslogs.1  rind-sysperms.1  rind-syssess.1  rind-sysunit.1  rind.1
rind-api/: Cargo.toml
rind-api/examples/: api.rs  rind.h
rind-api/src/: api.rs  lib.rs
rind-base/: Cargo.toml
rind-base/src/: base.rs  flow.rs  ipc.rs  mount.rs  networking.rs  permissions.rs  reaper.rs  services.rs  transport.rs  triggers.rs  units.rs  user.rs
rind-cli/: Cargo.toml
rind-cli/demo/: user_login.rs  user_shell.rs
rind-cli/examples/: active.rs
rind-cli/src/: macros.rs  print.rs  rind.rs
rind-common/: Cargo.toml
rind-common/src/: config.rs  lib.rs  logger.rs
rind-core/: Cargo.toml
rind-core/src/: boot.rs  config.rs  context.rs  core.rs  error.rs  events.rs  logger.rs  logging.rs  lookup.rs  metadata.rs  mount.rs  name.rs  orchestrator.rs  permissions.rs  persistence.rs  registry.rs  runtime.rs  services.rs  sockets.rs  store.rs  units.rs  user.rs
rind-core/src/flow/: flow.rs  mod.rs  transport.rs  triggers.rs
rind-core/src/utils/: mod.rs  mount.rs
rind-daemon/: Cargo.toml
rind-daemon/src/: daemon.rs
rind-flow/: Cargo.toml
rind-init/: Cargo.toml
rind-init/src/: init.rs
rind-ipc/: Cargo.toml
rind-macros/: Cargo.toml
rind-plugins/: Cargo.toml
src/: daemon.rs  init.rs  mount.rs  names.rs  rind.rs  services.rs  units.rs
(+16 files in other folders)
