[workspace]
members = [
  "crates/cli",
  # "crates/daemon",
  "crates/core",
  # "crates/common",
  "crates/base",
  "crates/init", "crates/macros",
  "crates/ipc", "crates/api", "crates/plugins", "crates/rind-test-plugin", "crates/tty-plugin", "crates/networking", "crates/display", "crates/common", "crates/initramfs",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
once_cell = "*"
# sdlang = "*"
toml = "*"
glob = "*"
nix = { version = "*", features = ["process", "acct", "socket", "term", "poll", "user", "ioctl", "fs", "signal", "mount", "event", "time", "net"] }
libc = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
strumbra = { version = "*", features = ["serde"] }
flexbuffers = "2"
tachyon-ipc = "*"
serde_json = "1"
bincode-next = { version = "*", features = ["serde"] }
crc32fast = "*"
fxhash = "*"
bitflags = "*"
libloading = "*"

# [profile.release]
# lto = true
# panic = "abort"
# strip = true
