[workspace]
members = [
  "crates/api",
  "crates/api-sys",
  "crates/cfg",
  "crates/cli",
  "crates/common",
  "crates/core",
  "crates/display",
  "crates/flow",
  "crates/init",
  "crates/ipc",
  "crates/macros",
  "crates/networking",
  "crates/plugins",
  "crates/primitives",
  "crates/services",
  "crates/systemd-loader",
  "crates/tty-plugin",
  "crates/xtask",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
once_cell = "*"
# sdlang = "*"
toml = "*"
glob = "*"
nix = { version = "*", features = ["process", "acct", "socket", "term", "poll", "user", "ioctl", "fs", "signal", "mount", "event", "time", "net", "mman"] }
libc = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
strumbra = { version = "*", features = ["serde"] }
serde_json = "1"
bincode-next = { version = "*", features = ["serde"] }
crc32fast = "*"
fxhash = "*"
bitflags = "*"
libloading = "*"
criterion = { version = "0.5", features = ["html_reports"] }

# [profile.release]
# lto = true
# panic = "abort"
# strip = true
