[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tar = "0.4"
zstd = "0.12"
fs_extra = "1.3"
nix = { version = "0.27", features = ["process", "acct", "term", "poll", "signal", "mount", "fs"] }
anyhow = "1.0"
ext4-lwext4 = "0.1.2"
ext4-lwext4-sys = "0.1.2"
sha-crypt = "^0.5.0"
libc = "*"
cbindgen = "0.29.2"
flate2 = "1.0"
xz2 = "0.1"
