[package]
name = "rind-base"
version.workspace = true
edition.workspace = true

[lib]
path = "src/base.rs"

[dependencies]
rind-core = { path = "../rind-core" }
rind-ipc = { path = "../rind-ipc", features = ["server"] }
serde.workspace = true
strumbra.workspace = true
serde_json.workspace = true
bincode-next.workspace = true
crc32fast.workspace = true
fxhash.workspace = true
once_cell.workspace = true
toml.workspace = true
anyhow.workspace = true
nix.workspace = true
libc.workspace = true
