[package]
name = "rind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rind"
path = "src/rind.rs"

[dependencies]
clap.workspace = true
# rind-ipc = { path = "../rind-ipc", default-features = false, features = [] }
libc.workspace = true

serde_json.workspace = true

owo-colors = "4.3.0"
