[package]
name = "rind-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/core.rs"

[dependencies]
toml.workspace = true
serde.workspace = true
once_cell.workspace = true
anyhow.workspace = true
nix.workspace = true
libc.workspace = true
strumbra.workspace = true
serde_json.workspace = true
