[package]
name = "rind-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/core.rs"

[dependencies]
rind-macros = { path = "../rind-macros" }
toml.workspace = true
serde.workspace = true
once_cell.workspace = true
anyhow.workspace = true
nix.workspace = true
libc.workspace = true
bincode-next.workspace = true
crc32fast.workspace = true
serde_json.workspace = true
bitflags.workspace = true
