[package]
name = "rind-api"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"

[lib]
path = "src/api.rs"
crate-type = ["cdylib"]

[dependencies]
libloading.workspace = true
once_cell.workspace = true
rind-ipc = { path = "../ipc" }
rind-base = { path = "../base" }
serde_json.workspace = true
libc.workspace = true
