[package]
name = "rind-api"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"

[lib]
path = "src/api.rs"
crate-type = ["cdylib"]

[dependencies]
libloading.workspace = true
once_cell.workspace = true
rind-ipc = { path = "../ipc" }
rind-flow = { path = "../flow" }
serde_json.workspace = true
libc.workspace = true
nix.workspace = true
