[package]
name = "rind-base"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"

[lib]
path = "src/base.rs"

[dependencies]
rind-core = { path = "../core" }
rind-ipc = { path = "../ipc", features = ["server"] }
serde.workspace = true
strumbra.workspace = true
serde_json.workspace = true
bincode-next.workspace = true
crc32fast.workspace = true
fxhash.workspace = true
once_cell.workspace = true
toml.workspace = true
anyhow.workspace = true
nix.workspace = true
libc.workspace = true
