[package]
name = "rind-cfg"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/cfg.rs"

[dependencies]
rind-core = { path = "../core" }
rind-primitives = { path = "../primitives" }
rind-services = { path = "../services" }
rind-flow = { path = "../flow" }
rind-ipc = { path = "../ipc", features = ["server"] }
flexbuffers.workspace = true


[dev-dependencies]
serde_json.workspace = true
toml.workspace = true
