[package]
name = "display"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/display.rs"
crate-type = ["cdylib"]

[dependencies]
rind-plugins = { path = "../plugins" }
rind-plugins-common = { path = "../common" }
serde.workspace = true

# smithay = "0.7.0"
