[package]
name = "rind-flow"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/flow.rs"

[dependencies]
rind-core = { path = "../core" }
rind-ipc = { path = "../ipc", features = ["server"] }
rind-primitives = { path = "../primitives" }
serde.workspace = true
serde_json.workspace = true
flexbuffers.workspace = true
toml.workspace = true
