[package]
name = "rind-init"
version.workspace = true
edition.workspace = true

[[bin]]
name = "init"
path = "src/init.rs"

[dependencies]
backoff = "0.4.0"
libc.workspace = true
nix.workspace = true
serde_json.workspace = true
rind-base = { path = "../base" }
rind-core = { path = "../core" }
rind-plugins = { path = "../plugins" }
# rind-daemon = { path = "../rind-daemon" }
