[package]
name = "rind-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/ipc.rs"

[dependencies]
libc.workspace = true
serde.workspace = true
nix.workspace = true
toml.workspace = true
rind-core = { path = "../core" }
flexbuffers.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true

[features]
default = ["server"]

server = []
