[package]
name = "rind-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/ipc.rs"

[dependencies]
libc.workspace = true
serde.workspace = true
nix.workspace = true
toml.workspace = true
rind-core = { path = "../core" }

serde_bytes = "0.11"
serde_json.workspace = true
rmp-serde = "1.3"
rmpv = "*"



[features]
default = ["server"]

server = []

[[bench]]
name = "transports"
harness = false

[dev-dependencies]
criterion.workspace = true
