[package]
name = "rind-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ipc type declarations"

[lib]
path = "src/ipc.rs"

[features]
default = ["server"]

server = ["rind-core"]

[dependencies]
libc.workspace = true
serde.workspace = true
nix.workspace = true
toml.workspace = true
rind-core = { version = "*", path = "../core", optional = true }
rind-common = { version = "*", path = "../common" }

serde_bytes = "0.11"
serde_json.workspace = true
rmp-serde = "1.3"


[[bench]]
name = "transports"
harness = false

[dev-dependencies]
criterion.workspace = true
