[package]
name = "networking"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/networking.rs"
crate-type = ["cdylib"]

[dependencies]
rind-core = { path = "../core" }
rind-plugins = { path = "../plugins" }
rind-ipc = { path = "../ipc" }
rind-flow = { path = "../flow" }
serde.workspace = true
