[package]
name = "rind-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rind-core = { path = "../core" }
rind-ipc = { path = "../ipc", features = ["server"] }
serde.workspace = true

toml.workspace = true
nix.workspace = true
libc.workspace = true
