[package]
name = "rind-services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rind-core = { path = "../core" }
rind-primitives = { path = "../primitives" }
rind-flow = { path = "../flow" }
rind-ipc = { path = "../ipc", features = ["server"] }
nix.workspace = true
libc.workspace = true
serde.workspace = true
flexbuffers.workspace = true
