[package]
name = "systemd-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/systemd.rs"
crate-type = ["cdylib"]

[dependencies]
rind-plugins = { path = "../plugins" }
rind-core = { path = "../core" }
rind-cfg = { path = "../cfg" }
rind-services = { path = "../services" }
rind-primitives = { path = "../primitives" }
rind-flow = { path = "../flow" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
