[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
toml = { workspace = true }
serde = { workspace = true }
tar = "0.4"
zstd = "0.12"
ext4-lwext4 = "0.1.2"
ext4-lwext4-sys = "0.1.2"
sha-crypt = "^0.5.0"
cbindgen = "0.29.2"
flate2 = "1.0"
xz2 = "0.1"
